[tool.poetry]
name = "plot-lines-per-day"
version = "0.1.0"
description = ""
authors = ["Manuel Kohler <manuel.kohler@roche.com>"]
readme = "README.md"
packages = [{include = "plot_lines_per_day", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
